plugins {
    id 'java'
}

group = 'com.lxp'
version = '0.0.1-SNAPSHOT'
description = 'content'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

repositories {
    mavenCentral()
}


dependencies {
    implementation 'org.springframework.retry:spring-retry:2.0.5'
    implementation 'org.springframework:spring-aspects:6.1.4'
    implementation "org.springframework.boot:spring-boot-starter-validation:3.5.6"
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.0'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
    implementation project(':common')
    implementation project(':api')
}

tasks.named('test') {
    useJUnitPlatform()
}

